--- a/js-task-7.html
+++ b/js-task-7.html
@@ -41,7 +41,7 @@
 <body>
     <div class="container">
         <div id="box">
-            <img src="../Images/iron man.jpg" alt="">
+            <img src="./Images/iron man.jpg" alt="">
         </div>
         
         <div class="but" align="center">
